--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN="NzA2NTkwNTMwNDE4NjM4OTEx.XrBcLw.wfe0x9ekV13LmAab67MrxecmNhk"
+TOKEN="NzA2NTkwNTMwNDE4NjM4OTEx.XrLl5Q.3fqYfk-dhctETOpdTBlLmC0JP2g"
