--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,10 @@ discord==1.0.1
 discord.py==1.3.3
 idna==2.9
 multidict==4.7.5
+Pillow==7.1.2
 python-dotenv==0.13.0
+quantumrandom==1.9.0
+selenium==3.141.0
+urllib3==1.25.9
+websockets==8.1
 yarl==1.4.2
