--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 aiohttp==3.6.2
 async-timeout==3.0.1
-attrs==19.3.0
+attrs==20.2.0
 chardet==3.0.4
 discord==1.0.1
-discord.py==1.3.3
-idna==2.9
-multidict==4.7.5
+discord.py==1.4.1
+idna==2.10
+idna-ssl==1.1.0
+multidict==4.7.6
 Pillow==7.1.2
+pkg-resources==0.0.0
 python-dotenv==0.13.0
 quantumrandom==1.9.0
 selenium==3.141.0
+typing-extensions==3.7.4.3
 urllib3==1.25.9
 websockets==8.1
-yarl==1.4.2
+yarl==1.6.0
